--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <%= render partial: "print_message", locals: { messages: @messages }  %>
 Welcome <%= user.name %>
 <%= link_to 'change password ', edit_user_path %>
-<%= link_to 'delete your account ',user_path, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to 'log out', user_logout_path, method: :post, data: { confirm: "Are you sure to log out?" } %>
+<%= link_to 'delete your account ',user_path, method: :delete, data: { confirm: "Are you sure to delete your account?" } %>
 
 <%= form_for @post, :url => user_add_post_path do |f| %>
   <%=f.label :content, "What's on your mind?" %>
