--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "print_message", locals: { messages: @messages }  %>
 
-<%= form_for @user, :url => users_path do |f| %>
+<%= form_for @user, :url => user_path(:id => @user.id) do |f| %>
   <%=f.label :old_password, "Old password" %>
   <%=f.password_field :old_password %>
 
