--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <%= render partial: "print_message", locals: { messages: @messages }  %>
-Welcome <%= user.name %>
-<%= link_to 'change password ', edit_user_path %>
-<%= link_to 'log out', user_logout_path, method: :post, data: { confirm: "Are you sure to log out?" } %>
-<%= link_to 'delete your account ',users_path, method: :delete, data: { confirm: "Are you sure to delete your account?" } %>
+Welcome <%= @user.name %>
+<%= link_to 'change password ', edit_user_path(@user.id) %>
+<%= link_to 'log out', users_logout_path, method: :post, data: { confirm: "Are you sure to log out?" } %>
+<%= link_to 'delete your account ', users_path, method: :delete, data: { confirm: "Are you sure to delete your account?" } %>
 
 <%= form_for @post, :url => users_add_post_path do |f| %>
   <%=f.label :content, "What's on your mind?" %>
@@ -13,7 +13,7 @@ Welcome <%= user.name %>
 <url>
  <% @user_posts.each do |post| %>
   <li>
-   Date: <%= post.date %>
+   Date: <%= post.created_at %>
    Content: <%= simple_format(post.content) %>
   </li>
  <% end %>
