--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <%= render partial: "print_message", locals: { messages: @messages }  %>
 Welcome <%= @user.name %>
-<%= link_to 'change password', edit_user_path(@user.id) %>
-<%= link_to 'log out', users_logout_path, method: :post, data: { confirm: "Are you sure to log out?" } %>
-<%= link_to 'delete your account', user_path(@user.id), method: :delete, data: { confirm: "Are you sure to delete your account?" } %>
+<%= link_to 'change password', edit_user_path(@user) %>
+<%= link_to 'log out', logout_users_path, method: :post, data: { confirm: "Are you sure to log out?" } %>
+<%= link_to 'delete your account', user_path(@user), method: :delete, data: { confirm: "Are you sure to delete your account?" } %>
 
-<%= form_for @post, :url => users_add_post_path do |f| %>
+<%= form_for @post, :url => add_post_users_path do |f| %>
   <%=f.label :content, "What's on your mind?" %>
   <%=f.text_field :content %>
 
